[ci] matrix run on major versions and 23
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>